overflow fix

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -26,7 +26,9 @@ body {
     width: 100%;
     background: var(--body-bg);
     position: relative;
-    overflow: hidden;
+    .overflow_me{
+        overflow: hidden;
+    }
     a {
         text-decoration: none;
         color: inherit;
